--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-svgr": "^2.0.1",
+    "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
@@ -24,8 +25,10 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-icons": "^4.1.0",
     "react-scrollspy": "^3.3.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "theme-ui": "^0.3.5"
   },
   "keywords": [
     "gatsby"
