--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Ajay NS <ajay.ns@outlook.com>",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@svgr/webpack": "^4.1.0",
+    "axios": "^0.21.1",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -20,11 +22,13 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
+    "querystring": "^0.2.0",
     "react": "^16.6.3",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-hook-form": "^6.14.1",
     "react-icons": "^4.1.0",
     "react-scrollspy": "^3.3.5",
     "styled-components": "^4.1.3",
